@@ -432,8 +432,12 @@ symlink_mesa_shader_slang() {
     action slang_compile_variable.h
     action slang_execute.c
     action slang_execute.h
+    action slang_export.c
+    action slang_export.h
     action slang_library_noise.c
     action slang_library_noise.h
+    action slang_link.c
+    action slang_link.h
     action slang_mesa.h
     action slang_preprocess.c
     action slang_preprocess.h
